[gd_scene load_steps=2 format=3 uid="uid://dp3tn3cxptpe3"]

[ext_resource type="Script" uid="uid://ccmlqursgt63b" path="res://scripts/UI/HealCooldownHUD.gd" id="1_anvcr"]

[node name="HealCooldownHUD" type="Control"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_anvcr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CooldownLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "⏳ Curación: 10.0s"

[node name="CooldownProgress" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
max_value = 10.0
value = 10.0
show_percentage = false
